--- a/server/package.json
+++ b/server/package.json
@@ -1,18 +1,25 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
+    "server:dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "db": "^1.1.1",
     "express": "^4.17.1",
-    "mongod": "^2.0.0"
+    "mongo": "^0.1.0",
+    "mongod": "^2.0.0",
+    "mongodb": "^3.2.7"
   },
   "devDependencies": {
+    "cors": "^2.8.5",
     "nodemon": "^1.19.1"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
