--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node server.js",
     "server:dev": "nodemon server.js",
+    "seeds": "mongo < ./db/seeds.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
